test/tests/compiler/18_structures/invalid_types/extra_credit/incompatible_union_types/return_type_mismatch.plx
type union u(    x: i32    )

pub fn return_union(none) union u {
    #  define an identical but distinct union type
    type union u(
        x: i32        )
    

    result: union u = $(10)

    #  return it; invalid b/c it's the wrong "union u" type
    return result
}

